--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f9f9f9"
-    tools:context=".MainActivity">
+    tools:context=".UI.MainActivity">
 
     <TextView
         android:id="@+id/title"
@@ -31,7 +31,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:fontFamily="@font/micraft"
-        android:background="#908D8D"
+        android:background="@drawable/button"
         android:text="Start"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -48,7 +48,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:background="#908D8D"
+        android:background="@drawable/button"
         android:fontFamily="@font/micraft"
         android:text="Ranking"
         android:textSize="40sp"
