--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -26,6 +26,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="150dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +41,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="150dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but1"
@@ -50,6 +56,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="150dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but4"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but2"
@@ -62,6 +71,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="150dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but3"
@@ -74,6 +86,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but6"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +101,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but7"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but5"
@@ -98,6 +116,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but8"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but6"
@@ -110,6 +131,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but7"
@@ -122,6 +146,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but10"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,6 +161,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but11"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but9"
@@ -146,6 +176,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but12"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but10"
@@ -158,6 +191,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but11"
@@ -170,6 +206,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but14"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -182,6 +221,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but15"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but13"
@@ -194,6 +236,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/but16"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but14"
@@ -206,6 +251,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/keypad"
+        android:fontFamily="@font/micraft"
+        android:textSize="30sp"
+        android:textColor="#FF0000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/but15"
