--- a/app/src/main/res/layout/activity_rank.xml
+++ b/app/src/main/res/layout/activity_rank.xml
@@ -1,9 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.RankActivity">
+    tools:context=".UI.RankActivity"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="1등 데이터"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="2등 데이터"
+        android:gravity="center"
+
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="3등 데이터"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="4등 데이터"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="5등 데이터"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="6등 데이터"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="7등 데이터"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="8등 데이터"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="9등 데이터"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="10등 데이터"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/micraft"/>
+
+
+
+
+
+
+</LinearLayout>
